# hipBLASLt

./: CMakeLists.txt  LICENSE.md  install.sh
clients/benchmarks/: README.md  client.cpp
clients/common/: hipblaslt_init_device.cpp
clients/gtest/: matmul_gtest.yaml  smoke_gtest.yaml
clients/include/: hipblaslt_common.yaml  hipblaslt_init.hpp  hipblaslt_math.hpp  hipblaslt_random.hpp  testing_matmul.hpp
clients/samples/: CMakeLists.txt
docs/: logging-heuristics.rst
docs/sphinx/: requirements.txt
tensilelite/: pytest.ini
tensilelite/Tensile/: BenchmarkProblems.py  ClientExecutable.py  ClientWriter.py  Common.py  Contractions.py  KernelWriter.py  KernelWriterAssembly.py  KernelWriterBetaOnly.py  KernelWriterConversion.py  KernelWriterModules.py  LibraryIO.py  LibraryLogic.py  SolutionStructs.py  Tensile.py  TensileRetuneLibrary.py
tensilelite/Tensile/Components/: GlobalWriteBatch.py  PackData.py  Signature.py  StreamK.py  SumUnroll.py
tensilelite/Tensile/CustomKernels/: CustomGSUs_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_AS_SAB_SAV_MT128x16x128_MI16x16x1_10_Freesize_gfx942.s  CustomGSUs_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_AS_SAB_SAV_MT128x16x128_MI16x16x1_44_Freesize_gfx942.s  CustomGSUs_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_AS_SAB_SAV_MT128x16x64_MI16x16x1_29_Freesize_gfx942.s  CustomGSUs_Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16x1_10_Freesize_gfx942.s  CustomGSUs_Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x128_MI16x16x1_16_Equality_gfx942.s  CustomGSUs_Cijk_Ailk_Bljk_F8NH_HHS_BH_MT128x16x64_MI16x16x1_30_Freesize_gfx942.s  CustomGSUs_Cijk_Ailk_Bljk_F8NH_HHS_BH_MT64x16x128_MI16x16x1_15_Equality_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_AS_SAB_SAV_MT128x16x128_MI16x16x1_shortname2.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_AS_SAB_SAV_shortname0_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_AS_SAB_SAV_shortname1_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname0_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname0_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname10_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname10_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname11_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname11_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname12_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname12_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname13_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname13_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname14_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname14_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname15_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname15_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname16_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname16_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname17_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname17_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname18_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname18_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname19_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname19_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname1_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname1_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname20_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname20_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname2_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname2_gfx942.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname3_gfx941.s  Custom_Cijk_Ailk_Bljk_F8NH_HHS_BH_Bias_GG_AS_SAB_SAV_UserArgs_shortname3_gfx942.s  (+58 more)
tensilelite/Tensile/Ops/: AMaxGenerator.py  gen_assembly.sh
tensilelite/Tensile/Source/: TensileTypes.h  tensile_float8_bfloat8.h  tensile_float8_bfloat8_bc.h
tensilelite/Tensile/Source/client/include/: DataInitialization.hpp  LogReporter.hpp  Reference.hpp  TypedId.hpp
tensilelite/Tensile/Source/client/source/: DataInitialization.cpp  HardwareMonitor.cpp  Reference.cpp  ReferenceValidator.cpp  ResultFileReporter.cpp  TypedId.cpp
tensilelite/Tensile/Source/lib/source/: DataTypes.cpp
tensilelite/Tensile/TensileCreateLibrary/: ParseArguments.py  Run.py  __init__.py
tensilelite/Tensile/TensileInstructions/: Base.py  DataType.py  Instructions.py
tensilelite/Tensile/Tests/common/amaxd/: 8rn_amaxd.yaml
tensilelite/Tensile/Tests/common/gemm/: 8rn_b_s.yaml  dtl.yaml  dtv.yaml  dtvA_swizzleA.yaml  fp8bf8nss.yaml  fp8n.yaml  fp8n_rowwise.yaml  fp8nfp16mix_fp8nss.yaml  fp8nfp16mix_hfp8ns.yaml  fp8nfp16mix_hhs.yaml  fp8nfp16mix_hhs_lsu4.yaml  gemm_ck_gfx942.yaml  hh_f8nhs.yaml  icache_flush.yaml  largeMT.yaml  (+3 more)
tensilelite/Tensile/Toolchain/: Assembly.py  Source.py  Validators.py
tensilelite/Tensile/Utilities/: merge.py
tensilelite/Tensile/cmake/: TensileConfig.cmake
(+19 files in other folders)
